# fastapi-cloud-apis

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  deploy.sh
docs/: codex-migration-audit.md  new-api-playbook.md
docs/superpowers/plans/: 2026-04-13-pdf-from-html-ui.md  2026-04-13-pdf-from-html.md  2026-04-13-qr-code-generator.md  2026-04-13-shared-infrastructure.md  2026-04-13-skills-system.md
docs/superpowers/specs/: 2026-04-13-pdf-from-html-design.md  2026-04-13-qr-code-generator-design.md  2026-04-13-skills-system-design.md
projects/email-validation/: README.md  pyproject.toml
projects/email-validation/email_validation/: config.py  main.py
projects/email-validation/email_validation/middleware/: cookie_auth.py
projects/email-validation/email_validation/schemas/: validation.py
projects/email-validation/email_validation/services/: disposable.py  dns_lookup.py  role_based.py  smtp.py  syntax.py  validator.py
projects/email-validation/email_validation/templates/: validate.html
projects/email-validation/src/email_validation/: config.py  exceptions.py  main.py
projects/email-validation/src/email_validation/routes/: ui.py  validation.py
projects/email-validation/src/email_validation/services/: free_provider.py
projects/email-validation/src/email_validation/templates/: base.html  login.html
projects/email-validation/tests/: conftest.py
projects/email-validation/tests/test_middleware/: test_cookie_auth.py
projects/email-validation/tests/test_routes/: test_ui.py  test_validation.py
projects/email-validation/tests/test_services/: test_disposable.py  test_dns_lookup.py  test_free_provider.py  test_role_based.py  test_smtp.py  test_syntax.py
projects/pdf-from-html/: README.md  pyproject.toml
projects/pdf-from-html/pdf_from_html/: config.py  exceptions.py  main.py
projects/pdf-from-html/pdf_from_html/routes/: generate.py  ui.py
projects/pdf-from-html/pdf_from_html/schemas/: generate.py
projects/pdf-from-html/pdf_from_html/services/: pdf_service.py
projects/pdf-from-html/pdf_from_html/templates/: base.html  generate.html  login.html
projects/pdf-from-html/src/pdf_from_html/: config.py  main.py
projects/pdf-from-html/src/pdf_from_html/routes/: generate.py
projects/pdf-from-html/src/pdf_from_html/services/: browser_pool.py  pdf_service.py
projects/pdf-from-html/tests/: conftest.py
projects/pdf-from-html/tests/test_middleware/: test_cookie_auth.py
projects/pdf-from-html/tests/test_routes/: test_generate.py  test_ui.py
projects/pdf-from-html/tests/test_schemas/: test_generate.py
projects/pdf-from-html/tests/test_services/: test_browser_pool.py  test_pdf_service.py
projects/qr-code-generator/: README.md  pyproject.toml
projects/qr-code-generator/qr_code_generator/: main.py
projects/qr-code-generator/qr_code_generator/middleware/: cookie_auth.py
projects/qr-code-generator/qr_code_generator/services/: generator.py
projects/qr-code-generator/qr_code_generator/templates/: base.html
projects/qr-code-generator/src/qr_code_generator/: config.py  exceptions.py  main.py
projects/qr-code-generator/src/qr_code_generator/routes/: generate.py  ui.py
projects/qr-code-generator/src/qr_code_generator/schemas/: generate.py
projects/qr-code-generator/src/qr_code_generator/services/: generator.py
projects/qr-code-generator/src/qr_code_generator/templates/: generate.html  login.html
projects/qr-code-generator/tests/: conftest.py
projects/qr-code-generator/tests/test_routes/: test_generate.py  test_ui.py
projects/qr-code-generator/tests/test_schemas/: test_generate.py
projects/qr-code-generator/tests/test_services/: test_caching.py  test_generator.py
shared/: pyproject.toml
shared/src/shared/: __init__.py  config.py  database.py  dependencies.py  redis_client.py  setup.py
shared/src/shared/auth/: api_key.py  key_utils.py  middleware.py  models.py  rapidapi.py
shared/src/shared/billing/: plans.py  stripe_client.py  webhooks.py
shared/src/shared/metering/: counter.py  middleware.py  storage.py
shared/src/shared/middleware/: __init__.py  channel_detect.py  cookie_auth.py
shared/src/shared/rate_limit/: limiter.py  middleware.py
shared/tests/: conftest.py
shared/tests/test_auth/: test_api_key.py  test_key_utils.py  test_models.py  test_rapidapi.py
shared/tests/test_billing/: test_plans.py
shared/tests/test_metering/: test_counter.py
shared/tests/test_middleware/: test_integration.py
shared/tests/test_rate_limit/: test_limiter.py
skills/api-business/: competitor-analysis.md  conversion-optimization.md  pricing-strategies.md
skills/api-catalog/: README.md  catalog.md  evaluation-criteria.md
skills/api-patterns/: aggregator.md  ai-wrapper.md  data-proxy.md  document-processor.md  generator.md
skills/fastapi-cloud/: deployment.md  monitoring.md  scaling.md
skills/marketplace/: api-documentation.md  rapidapi-publishing.md  seo-and-discovery.md
skills/shared-infra/: architecture.md  auth-and-api-keys.md  billing-stripe.md  rapidapi-compatibility.md  rate-limiting.md  usage-metering.md
templates/api-starter/: .gitignore  README.md  pyproject.toml
templates/api-starter/template_api/: __init__.py  config.py  exceptions.py  main.py
templates/api-starter/template_api/dependencies/: __init__.py
templates/api-starter/template_api/middleware/: __init__.py  cookie_auth.py
templates/api-starter/template_api/routes/: __init__.py  api.py  ui.py
templates/api-starter/template_api/schemas/: __init__.py  ping.py
templates/api-starter/template_api/services/: __init__.py  ping.py
templates/api-starter/template_api/templates/: base.html  dashboard.html  login.html
templates/api-starter/tests/: __init__.py  conftest.py
templates/api-starter/tests/test_routes/: __init__.py  test_api.py  test_ui.py
