[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf-from-html"
version = "0.1.0"
description = "PDF from HTML API — generate PDFs from raw HTML or URLs using Chromium"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "pydantic-settings>=2.7.0",
    "playwright>=1.52.0",
    "shared",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_from_html"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
shared = { path = "../../shared", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.14.0",
    "ruff>=0.9.0",
    "fakeredis>=2.26.0",
    "aiosqlite>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
