[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf-from-html"
version = "0.1.0"
description = "PDF from HTML API — generate PDFs from raw HTML or URLs using xhtml2pdf"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "pydantic-settings>=2.7.0",
    "xhtml2pdf>=0.2.17",
    "jinja2>=3.1.0",
    "itsdangerous>=2.2.0",
    "shared",
]

[tool.fastapi]
entrypoint = "pdf_from_html.main:app"

[tool.hatch.build.targets.wheel]
packages = ["pdf_from_html"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
# pycairo requires cairo C library at build time (pkg-config + libcairo2-dev)
# which FastAPI Cloud's Docker build env doesn't provide. We don't need SVG
# rendering in PDFs, so exclude it from the transitive dependency chain:
# xhtml2pdf → svglib → rlpycairo → pycairo
exclude-dependencies = ["pycairo"]

[tool.uv.sources]
shared = { path = "../../shared", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.14.0",
    "ruff>=0.9.0",
    "fakeredis>=2.26.0",
    "aiosqlite>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
